--- a/ZipSaber.csproj
+++ b/ZipSaber.csproj
@@ -1,29 +1,78 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <!-- !!! IMPORTANT: Replace this path with YOUR Beat Saber installation directory !!! -->
     <BeatSaberDir>G:\SteamLibrary\steamapps\common\Beat Saber</BeatSaberDir>
+
     <TargetFramework>net472</TargetFramework>
     <LangVersion>latest</LangVersion>
     <AssemblyName>ZipSaber</AssemblyName>
     <RootNamespace>ZipSaber</RootNamespace>
-    <Version>1.2.3-fixfreeze</Version> <!-- Version bump -->
+    <!-- Version indicating duplicate handling -->
+    <Version>1.4.0-DuplicateHandling</Version>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <OutputPath>bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'"><DebugType>portable</DebugType></PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'"><DebugType>none</DebugType></PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'"> <DebugType>portable</DebugType> </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'"> <DebugType>none</DebugType> </PropertyGroup>
+
   <ItemGroup>
-    <!-- Using Absolute Paths for Reliability -->
-    <Reference Include="BSIPA"><HintPath>G:\SteamLibrary\steamapps\common\Beat Saber\Beat Saber_Data\Managed\IPA.Loader.dll</HintPath><Private>False</Private></Reference>
-    <!-- *** UNCOMMENTED BSIPA.Utilities *** -->
-    <Reference Include="BSIPA.Utilities"><HintPath>G:\SteamLibrary\steamapps\common\Beat Saber\Beat Saber_Data\Managed\BSIPA.Utilities.dll</HintPath><Private>False</Private></Reference>
-    <Reference Include="IPA.Logging"><HintPath>G:\SteamLibrary\steamapps\common\Beat Saber\Beat Saber_Data\Managed\IPA.Logging.dll</HintPath><Private>False</Private></Reference>
-    <Reference Include="SongCore"><HintPath>G:\SteamLibrary\steamapps\common\Beat Saber\Plugins\SongCore.dll</HintPath><Private>False</Private></Reference>
-    <Reference Include="UnityEngine"><HintPath>G:\SteamLibrary\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.dll</HintPath><Private>False</Private></Reference>
-    <Reference Include="UnityEngine.CoreModule"><HintPath>G:\SteamLibrary\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.CoreModule.dll</HintPath><Private>False</Private></Reference>
-    <Reference Include="System" /><Reference Include="System.Core" /><Reference Include="System.IO.Compression.FileSystem" /><Reference Include="System.IO.Compression" /><Reference Include="System.Xml.Linq" /><Reference Include="System.Data.DataSetExtensions" /><Reference Include="Microsoft.CSharp" /><Reference Include="System.Data" /><Reference Include="System.Net.Http" /><Reference Include="System.Xml" /><Reference Include="System.Runtime"/>
+    <!-- Core Beat Saber & BSIPA Libraries -->
+    <!-- References are included, which will cause warnings if DLLs are missing -->
+
+    <Reference Include="BSIPA">
+      <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\IPA.Loader.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+
+    <Reference Include="UnityEngine">
+      <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.CoreModule">
+      <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+
+    <!-- Required for SongCore -->
+     <Reference Include="HMLib">
+      <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\HMLib.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+
+    <!-- Mod Dependencies -->
+    <Reference Include="SongCore">
+      <HintPath>$(BeatSaberDir)\Plugins\SongCore.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+
+    <!-- No BSML dependency needed -->
+
+    <!-- .NET Framework Assemblies -->
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Runtime"/>
+
   </ItemGroup>
-  <ItemGroup><EmbeddedResource Include="manifest.json" /></ItemGroup>
-  <Target Name="CopyFilesOnBuild" AfterTargets="Build"><Copy SourceFiles="$(OutputPath)\$(AssemblyName).dll" DestinationFolder="$(BeatSaberDir)\Plugins\" /><Message Text="Copied $(AssemblyName).dll to $(BeatSaberDir)\Plugins\" Importance="High" /></Target>
+
+  <ItemGroup>
+    <!-- Make sure you have a manifest.json suitable for this version -->
+    <EmbeddedResource Include="manifest.json" />
+  </ItemGroup>
+
+  <Target Name="CopyFilesOnBuild" AfterTargets="Build">
+    <Copy SourceFiles="$(OutputPath)\$(AssemblyName).dll" DestinationFolder="$(BeatSaberDir)\Plugins\" />
+    <Message Text="Copied $(AssemblyName).dll to $(BeatSaberDir)\Plugins\" Importance="High" />
+  </Target>
+
 </Project>
