--- a/ZipSaber.csproj
+++ b/ZipSaber.csproj
@@ -1,29 +1,102 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <BeatSaberDir>G:\SteamLibrary\steamapps\common\Beat Saber</BeatSaberDir>
+    <!-- !!! IMPORTANT: Replace this path with YOUR 1.29.1 Beat Saber installation !!! -->
+    <BeatSaberDir>G:\SteamLibrary\steamapps\common\Beat Saber</BeatSaberDir> <!-- Example Path -->
+
     <TargetFramework>net472</TargetFramework>
     <LangVersion>latest</LangVersion>
     <AssemblyName>ZipSaber</AssemblyName>
     <RootNamespace>ZipSaber</RootNamespace>
-    <Version>1.2.3-fixfreeze</Version> <!-- Version bump -->
+    <Version>1.5.0-DeleteOnClose</Version> <!-- Or your desired version -->
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <OutputPath>bin\$(Configuration)\</OutputPath>
+    <EnableDefaultCompileItems>false</EnableDefaultCompileItems> <!-- Default items disabled -->
+    <Nullable>disable</Nullable>
+ </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DebugType>portable</DebugType>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'"><DebugType>portable</DebugType></PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'"><DebugType>none</DebugType></PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
   <ItemGroup>
-    <!-- Using Absolute Paths for Reliability -->
-    <Reference Include="BSIPA"><HintPath>G:\SteamLibrary\steamapps\common\Beat Saber\Beat Saber_Data\Managed\IPA.Loader.dll</HintPath><Private>False</Private></Reference>
-    <!-- *** UNCOMMENTED BSIPA.Utilities *** -->
-    <Reference Include="BSIPA.Utilities"><HintPath>G:\SteamLibrary\steamapps\common\Beat Saber\Beat Saber_Data\Managed\BSIPA.Utilities.dll</HintPath><Private>False</Private></Reference>
-    <Reference Include="IPA.Logging"><HintPath>G:\SteamLibrary\steamapps\common\Beat Saber\Beat Saber_Data\Managed\IPA.Logging.dll</HintPath><Private>False</Private></Reference>
-    <Reference Include="SongCore"><HintPath>G:\SteamLibrary\steamapps\common\Beat Saber\Plugins\SongCore.dll</HintPath><Private>False</Private></Reference>
-    <Reference Include="UnityEngine"><HintPath>G:\SteamLibrary\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.dll</HintPath><Private>False</Private></Reference>
-    <Reference Include="UnityEngine.CoreModule"><HintPath>G:\SteamLibrary\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.CoreModule.dll</HintPath><Private>False</Private></Reference>
-    <Reference Include="System" /><Reference Include="System.Core" /><Reference Include="System.IO.Compression.FileSystem" /><Reference Include="System.IO.Compression" /><Reference Include="System.Xml.Linq" /><Reference Include="System.Data.DataSetExtensions" /><Reference Include="Microsoft.CSharp" /><Reference Include="System.Data" /><Reference Include="System.Net.Http" /><Reference Include="System.Xml" /><Reference Include="System.Runtime"/>
-  </ItemGroup>
-  <ItemGroup><EmbeddedResource Include="manifest.json" /></ItemGroup>
-  <Target Name="CopyFilesOnBuild" AfterTargets="Build"><Copy SourceFiles="$(OutputPath)\$(AssemblyName).dll" DestinationFolder="$(BeatSaberDir)\Plugins\" /><Message Text="Copied $(AssemblyName).dll to $(BeatSaberDir)\Plugins\" Importance="High" /></Target>
+    <!-- Core Game & BSIPA References -->
+    <Reference Include="BSIPA">
+        <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\IPA.Loader.dll</HintPath>
+        <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine">
+        <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.dll</HintPath>
+        <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.CoreModule">
+        <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+        <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+        <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.UI.dll</HintPath>
+        <Private>False</Private>
+    </Reference>
+     <Reference Include="UnityEngine.UIElementsModule">
+      <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.UIElementsModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.UIModule">
+      <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.UIModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="HMLib">
+        <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\HMLib.dll</HintPath>
+        <Private>False</Private>
+    </Reference>
+     <Reference Include="HMUI">
+        <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\HMUI.dll</HintPath>
+        <Private>False</Private>
+    </Reference>
+
+    <!-- Mod Dependencies -->
+    <Reference Include="SongCore">
+        <HintPath>$(BeatSaberDir)\Plugins\SongCore.dll</HintPath>
+        <Private>False</Private>
+    </Reference>
+     <Reference Include="BeatSaberMarkupLanguage">
+        <HintPath>$(BeatSaberDir)\Plugins\BSML.dll</HintPath> <!-- Ensure filename is BSML.dll -->
+        <Private>False</Private>
+    </Reference>
+
+    <!-- System Assemblies -->
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Runtime"/>
+
+    <!-- Explicit Compile Items (Required because EnableDefaultCompileItems is false) -->
+    <Compile Include="Plugin.cs" />
+    <Compile Include="PluginConfig.cs" />
+    <!--<Compile Include="UI\SettingsViewController.cs" /> -->
+
+    <!-- Embedded Resources -->
+   <!-- <EmbeddedResource Include="UI\SettingsViewController.bsml" />-->
+    <EmbeddedResource Include="manifest.json" />
+    <EmbeddedResource Include="settings.bsml" /> <!-- ADD THIS LINE -->
+
+ </ItemGroup>
+
+  <Target Name="CopyFilesOnBuild" AfterTargets="Build">
+    <Copy SourceFiles="$(OutputPath)\$(AssemblyName).dll" DestinationFolder="$(BeatSaberDir)\Plugins\" />
+    <Message Text="Copied $(AssemblyName).dll to $(BeatSaberDir)\Plugins\" Importance="High" />
+  </Target>
+
 </Project>
